package com.example.learn.design.pattern.han._05结构型模式._02桥接模式.core;

//接口
public interface Brand {
    void open();
    void close();
    void call();
}
